--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
